Fixed clipping issue at a certain resolution.

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -49,8 +49,13 @@ body {
 
   section {
     padding: 5em;
-    @media (orientation: portrait) and (max-device-height: 1000px) {
-      padding: 3em;
+    @media (orientation: portrait) {
+      @media (max-device-height: 1000px) {
+        padding: 3em;
+      }
+      h1 {
+        margin-top: 0;
+      }
     }
 
     @media (orientation: landscape) {
